# primed_keys

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: app.rs  main.rs  os.rs
src-tauri/src/macos/: app.rs
src-tauri/src/windows/: app.rs
